<resources>
  <string name="app_name">Fadhili</string>
  <string name="email_hint">something@example.com</string>
  <string name="login">Login</string>
  <string name="or">or</string>
  <string name="create_an_account">Create an Account</string>
  <string name="firstname">Firstname</string>
  <string name="enter_your_password">Enter your Password</string>
  <string name="lastname">Lastname</string>
  <string name="re_enter_password">Re-enter password</string>
  <string name="create_password">Create password</string>
  <string name="google">Google</string>
  <string name="title_activity_signup">SignupActivity</string>
  <string name="placeholder_package_title">Package Name</string>
  <string name="placeholder_package_price">Price</string>
  <string name="title_activity_posts">PostsActivity</string>
  <string name="post_image">Post Image</string>
  <string name="comment_header">Comments</string>
  <string name="add_a_comment">Add a comment</string>
  <string name="comment">Comment</string>
  <string name="package_contents">Package Contents</string>
  <string name="add_to_cart">Add to Cart</string>
  <string name="check_out">Check Out</string>
  <string name="total_donation">Total Donation</string>
</resources>
