<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".posts.PostActivity">

  <ImageView
    android:id="@+id/post_view_image"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@string/post_image"/>

  <TextView
    android:id="@+id/post_view_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/post_view_body"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/post_view_created_at"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/comment_header"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <EditText
      android:id="@+id/post_comment_adder"
      android:layout_width="120dp"
      android:layout_height="wrap_content"
      android:inputType="textCapSentences"
      android:hint="@string/add_a_comment"/>

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/comment"
      android:onClick="addComment"/>

  </LinearLayout>

  <android.support.v7.widget.RecyclerView
    android:id="@+id/comments_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>


</LinearLayout>