<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".donation.DonationPackageActivity">

  <android.support.v7.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/card_margin"
    android:elevation="3dp"
    app:cardCornerRadius="@dimen/card_album_radius">

    <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

      <ImageView
        android:id="@+id/single_donation_package_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/album_cover_height"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitXY"/>

      <TextView
        android:id="@+id/single_donation_package_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/single_donation_package_image"
        android:paddingLeft="@dimen/album_title_padding"
        android:paddingRight="@dimen/album_title_padding"
        android:paddingTop="@dimen/album_title_padding"
        android:text="@string/placeholder_package_title"
        android:textColor="@color/album_title"
        android:textSize="@dimen/album_title"/>

      <TextView
        android:id="@+id/single_donation_package_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/single_donation_package_image"
        android:layout_toEndOf="@id/single_donation_package_title"
        android:paddingLeft="@dimen/album_title_padding"
        android:paddingRight="@dimen/album_title_padding"
        android:paddingTop="@dimen/album_title_padding"
        android:text="@string/placeholder_package_price"
        android:textColor="@color/album_title"
        android:textSize="@dimen/album_title"/>

      <TextView
        android:id="@+id/single_donation_package_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    </RelativeLayout>

  </android.support.v7.widget.CardView>

  <TextView
    android:id="@+id/single_donation_package_destination"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/package_contents"/>

  <TextView
    android:id="@+id/single_donation_package_contents"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/add_to_cart"
    android:onClick="addToCart"/>

</LinearLayout>